Added the cart service. Added functionality to the Products service and used it to populate the productsList component.

--- a/src/app/shop/products-list/products-list.component.html
+++ b/src/app/shop/products-list/products-list.component.html
@@ -1,1 +1,9 @@
 <p>products-list works!</p>
+<div *ngFor="let product of products">
+  <div>
+    <span>{{product.title}}</span>
+    <span>{{product.price}}</span>
+    <br/>
+    <br/>
+  </div>
+</div>
