--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<span>Main component</span>
+<mat-toolbar color="primary">
+  <a mat-button href="/">My Store</a>
+  <span [ngClass]="'spacer'"></span>
+  <button mat-icon-button aria-label="Cart">
+    <mat-icon>shopping_cart</mat-icon>
+  </button>
+</mat-toolbar>
 <shop-shop-screen></shop-shop-screen>
