--- a/src/app/shop/product/product.component.html
+++ b/src/app/shop/product/product.component.html
@@ -1,1 +1,26 @@
-<p>product works!</p>
+<mat-card [ngClass]="'card'" >
+  <img mat-card-image [ngClass]="'image'" src={{product.image}} alt={{product.title}}>
+  <mat-card-header>
+    <mat-card-title>${{product.price}}</mat-card-title>
+    <mat-card-subtitle>{{product.title}}</mat-card-subtitle>
+  </mat-card-header>
+  <div>
+    <div *ngIf="atCart(); then thenBlock else elseBlock"></div>
+    <ng-template #thenBlock>
+      <div [ngClass]="'buttons'">
+        <button mat-icon-button (click)="removeFromCart()" color="warn" aria-label="Example icon button with a home icon">
+          <mat-icon>remove</mat-icon>
+        </button>      
+        <span>{{amount}}</span>
+        <button mat-icon-button (click)="addToCart()" color="primary" aria-label="Example icon button with a home icon">
+          <mat-icon>add</mat-icon>
+        </button>
+        <div [ngClass]="'spacer'"></div>
+        <span>${{amount*product.price}}</span>
+      </div>
+    </ng-template>
+    <ng-template #elseBlock>
+      <button mat-raised-button color="primary" (click)="addToCart()">Add to cart</button>
+    </ng-template>
+  </div>
+</mat-card>
