--- a/src/app/cart/success-screen/success-screen.component.html
+++ b/src/app/cart/success-screen/success-screen.component.html
@@ -1,1 +1,5 @@
-<p>success-screen works!</p>
+<div [ngClass]="'main-container'">
+  <span [ngClass]="'title'">Done</span>
+  <span [ngClass]="'subtitle'">Your order is on the way! :)</span>
+  <button mat-button color="primary" [routerLink]="''">Continue shopping</button>
+</div>
