--- a/src/app/page-not-found/page-not-found.component.scss
+++ b/src/app/page-not-found/page-not-found.component.scss
@@ -6,16 +6,16 @@
 }
 
 .title {
-  font-size: 90px;
+  font-size: 150px;
   font-weight: bold;
-  color: lawngreen;
+  color: crimson;
   margin-top: 15%;
   margin-bottom: 30px;
   width: fit-content;
 }
 
 .subtitle {
-  font-size: 42px;
+  font-size: 48px;
   margin-bottom: 30px;
   width: fit-content;
 }
