--- a/src/app/shop/product/product.component.html
+++ b/src/app/shop/product/product.component.html
@@ -1,26 +1,31 @@
-<mat-card [ngClass]="'card'" >
-  <img mat-card-image [ngClass]="'image'" src={{product.image}} alt={{product.title}}>
+<mat-card [ngClass]="'card'">
+  <img mat-card-image [ngClass]="'image'" src={{product.image}} alt={{product.title}}  (click)="goToDetails()">
   <mat-card-header>
     <mat-card-title>${{product.price}}</mat-card-title>
     <mat-card-subtitle>{{product.title}}</mat-card-subtitle>
   </mat-card-header>
-  <div>
-    <div *ngIf="atCart(); then thenBlock else elseBlock"></div>
-    <ng-template #thenBlock>
+  <div [ngClass]="'spacer'"></div>
+  <div *ngIf="getAmount() > 0; then thenBlock else elseBlock"></div>
+  <ng-template #thenBlock>
+    <div [ngClass]="'cart-info'" >
       <div [ngClass]="'buttons'">
         <button mat-icon-button (click)="removeFromCart()" color="warn" aria-label="Example icon button with a home icon">
           <mat-icon>remove</mat-icon>
         </button>      
-        <span>{{amount}}</span>
+        <span>{{getAmount()}}</span>
         <button mat-icon-button (click)="addToCart()" color="primary" aria-label="Example icon button with a home icon">
           <mat-icon>add</mat-icon>
         </button>
-        <div [ngClass]="'spacer'"></div>
-        <span>${{amount*product.price}}</span>
       </div>
-    </ng-template>
-    <ng-template #elseBlock>
-      <button mat-raised-button color="primary" (click)="addToCart()">Add to cart</button>
-    </ng-template>
-  </div>
+      <div>
+        <span>${{(getAmount()*product.price).toFixed(2)}}</span>
+        <button mat-icon-button (click)="remove()" color="warn" aria-label="Example icon button with a home icon">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </div>
+    </div>
+  </ng-template>
+  <ng-template #elseBlock>
+    <button mat-raised-button color="primary" (click)="addToCart()">Add to cart</button>
+  </ng-template>
 </mat-card>
