--- a/src/app/shop/products-list/products-list.component.html
+++ b/src/app/shop/products-list/products-list.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="'mainContainer'">
+<div [ngClass]="'main-container'">
   <div *ngIf="products.length == 0; then showSpinner else showProducts"></div>
   <ng-template #showSpinner><mat-spinner></mat-spinner></ng-template>
   <ng-template #showProducts><shop-product *ngFor="let product of products" [product]="product"></shop-product></ng-template>
